--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 	<!--<div class="grafik">
-    <img onclick="window.location.reload()" id="log" src="https://static1.squarespace.com/static/536d89aae4b096ba2b583666/t/5bf314c903ce64ef0e4bc1d3/1604464958832/?format=1500w" style="width: 150px"><a href="file:///C:/Users/%D0%95%D1%80%D0%BA%D0%B5%D0%B6%D0%B0%D0%BD%20%D0%93%D0%B0%D0%BB%D1%8B%D0%BC%D0%B1%D0%B5%D0%BA%D0%BE%D0%B2%D0%B0/Desktop/Project/pastry.html#"></a>
+    <img onclick="window.location.reload()" id="log" src="https://static1.squarespace.com/static/536d89aae4b096ba2b583666/t/5bf314c903ce64ef0e4bc1d3/1604464958832/?format=1500w" style="width: 150px"><a href="https://kesha201.github.io/gourmnds/"></a>
     <div class="birge">
     <img id="tel" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Black_telephone_icon_from_DejaVu_Sans.svg/1280px-Black_telephone_icon_from_DejaVu_Sans.svg.png" style="width: 40px">
     <p id="tel_1" style="margin-left: 3px; letter-spacing: 1px;">+7(7272)64-67-66</p>
@@ -44,10 +44,10 @@
   </div>
   </div>-->
   <div class="header">
-      <div onclick="window.location.reload()" id="basy" onmouseover="big(this)" onmouseout="small(this)"><a href="file:///C:/Users/%D0%95%D1%80%D0%BA%D0%B5%D0%B6%D0%B0%D0%BD%20%D0%93%D0%B0%D0%BB%D1%8B%D0%BC%D0%B1%D0%B5%D0%BA%D0%BE%D0%B2%D0%B0/Desktop/Project/pastry.html#">Главная</div></a>
-      <div id="about_us" onmouseover="big(this)" onmouseout="small(this)"><a href="file:///C:/Users/%D0%95%D1%80%D0%BA%D0%B5%D0%B6%D0%B0%D0%BD%20%D0%93%D0%B0%D0%BB%D1%8B%D0%BC%D0%B1%D0%B5%D0%BA%D0%BE%D0%B2%D0%B0/Desktop/Project/pastry.html#">О нас</div></a>
-      <div id="products" onclick="change(this)" onmouseover="big(this)" onmouseout="small(this)"><a href="file:///C:/Users/%D0%95%D1%80%D0%BA%D0%B5%D0%B6%D0%B0%D0%BD%20%D0%93%D0%B0%D0%BB%D1%8B%D0%BC%D0%B1%D0%B5%D0%BA%D0%BE%D0%B2%D0%B0/Desktop/Project/pastry.html#">Каталог</div></a>
-      <div id="delivery" onclick="adam()" onmouseover="big(this)" onmouseout="small(this)"><a href="file:///C:/Users/%D0%95%D1%80%D0%BA%D0%B5%D0%B6%D0%B0%D0%BD%20%D0%93%D0%B0%D0%BB%D1%8B%D0%BC%D0%B1%D0%B5%D0%BA%D0%BE%D0%B2%D0%B0/Desktop/Project/pastry.html#">Связаться с нами</div></a>
+      <div onclick="window.location.reload()" id="basy" onmouseover="big(this)" onmouseout="small(this)"><a href="https://kesha201.github.io/gourmnds/">Главная</div></a>
+      <div id="about_us" onmouseover="big(this)" onmouseout="small(this)"><a href="https://kesha201.github.io/gourmnds/">О нас</div></a>
+      <div id="products" onclick="change(this)" onmouseover="big(this)" onmouseout="small(this)"><a href="https://kesha201.github.io/gourmnds/">Каталог</div></a>
+      <div id="delivery" onclick="adam()" onmouseover="big(this)" onmouseout="small(this)"><a href="https://kesha201.github.io/gourmnds/">Связаться с нами</div></a>
   </div>
   <div class="menu">
 	<img id="menu" src="menu.png" style="">
